publish: Merge pull request #12 from apolloio/jerry/organization_rename
generated from commit b4badd8a15b6a49889bbdd4b065d5da4ff427dd1

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>ZenProspect API Reference</title>
+    <title>Apollo API Reference</title>
 
     <style media="screen">
       .highlight table td { padding: 5px; }
@@ -522,7 +522,7 @@ You must replace <code>YOUR_API_KEY</code> with your personal API key.
                 </span><span class="nl">"linkedin_uid"</span><span class="p">:</span><span class="w"> </span><span class="s2">"18511550"</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"publicly_traded_symbol"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"publicly_traded_exchange"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
-                </span><span class="nl">"logo_url"</span><span class="p">:</span><span class="w"> </span><span class="s2">"https://zenprospect-server.com/uploads/pictures/5f0265XXXXXXXXXXXXXXXXXX/picture"</span><span class="p">,</span><span class="w">
+                </span><span class="nl">"logo_url"</span><span class="p">:</span><span class="w"> </span><span class="s2">"https://apollo-server.com/uploads/pictures/5f0265XXXXXXXXXXXXXXXXXX/picture"</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"crunchbase_url"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"primary_domain"</span><span class="p">:</span><span class="w"> </span><span class="s2">"apollo.io"</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"starred_by_user_ids"</span><span class="p">:</span><span class="w"> </span><span class="p">[],</span><span class="w">
@@ -544,7 +544,7 @@ You must replace <code>YOUR_API_KEY</code> with your personal API key.
                 </span><span class="nl">"linkedin_uid"</span><span class="p">:</span><span class="w"> </span><span class="s2">"18511550"</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"publicly_traded_symbol"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"publicly_traded_exchange"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
-                </span><span class="nl">"logo_url"</span><span class="p">:</span><span class="w"> </span><span class="s2">"https://zenprospect-server.com/uploads/pictures/5f0265XXXXXXXXXXXXXXXXXX/picture"</span><span class="p">,</span><span class="w">
+                </span><span class="nl">"logo_url"</span><span class="p">:</span><span class="w"> </span><span class="s2">"https://apollo-server.com/uploads/pictures/5f0265XXXXXXXXXXXXXXXXXX/picture"</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"crunchbase_url"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"primary_domain"</span><span class="p">:</span><span class="w"> </span><span class="s2">"apollo.io"</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"starred_by_user_ids"</span><span class="p">:</span><span class="w"> </span><span class="p">[],</span><span class="w">
@@ -714,7 +714,7 @@ You must replace <code>YOUR_API_KEY</code> with your personal API key.
             </span><span class="nl">"linkedin_uid"</span><span class="p">:</span><span class="w"> </span><span class="s2">"18511550"</span><span class="p">,</span><span class="w">
             </span><span class="nl">"publicly_traded_symbol"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
             </span><span class="nl">"publicly_traded_exchange"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
-            </span><span class="nl">"logo_url"</span><span class="p">:</span><span class="w"> </span><span class="s2">"https://zenprospect-pserver.com/uploads/pictures/5f026XXXXXXXXXXXXXXXX/picture"</span><span class="p">,</span><span class="w">
+            </span><span class="nl">"logo_url"</span><span class="p">:</span><span class="w"> </span><span class="s2">"https://apollo-server.com/uploads/pictures/5f026XXXXXXXXXXXXXXXX/picture"</span><span class="p">,</span><span class="w">
             </span><span class="nl">"crunchbase_url"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
             </span><span class="nl">"primary_domain"</span><span class="p">:</span><span class="w"> </span><span class="s2">"apollo.io"</span><span class="p">,</span><span class="w">
             </span><span class="nl">"persona_counts"</span><span class="p">:</span><span class="w"> </span><span class="p">{},</span><span class="w">
@@ -894,7 +894,7 @@ You must replace <code>YOUR_API_KEY</code> with your personal API key.
         </span><span class="nl">"linkedin_uid"</span><span class="p">:</span><span class="w"> </span><span class="s2">"1441"</span><span class="p">,</span><span class="w">
         </span><span class="nl">"publicly_traded_symbol"</span><span class="p">:</span><span class="w"> </span><span class="s2">"GOOG"</span><span class="p">,</span><span class="w">
         </span><span class="nl">"publicly_traded_exchange"</span><span class="p">:</span><span class="w"> </span><span class="s2">"nasdaq"</span><span class="p">,</span><span class="w">
-        </span><span class="nl">"logo_url"</span><span class="p">:</span><span class="w"> </span><span class="s2">"https://zenprospect-server.com/uploads/pictures/5f1aa5XXXXXXXXXXXXXXXXXX/picture"</span><span class="p">,</span><span class="w">
+        </span><span class="nl">"logo_url"</span><span class="p">:</span><span class="w"> </span><span class="s2">"https://apollo-server.com/uploads/pictures/5f1aa5XXXXXXXXXXXXXXXXXX/picture"</span><span class="p">,</span><span class="w">
         </span><span class="nl">"crunchbase_url"</span><span class="p">:</span><span class="w"> </span><span class="s2">"https://www.crunchbase.com/organization/google"</span><span class="p">,</span><span class="w">
         </span><span class="nl">"primary_domain"</span><span class="p">:</span><span class="w"> </span><span class="s2">"google.com"</span><span class="p">,</span><span class="w">
         </span><span class="nl">"starred_by_user_ids"</span><span class="p">:</span><span class="w"> </span><span class="p">[],</span><span class="w">
@@ -1505,7 +1505,7 @@ Do not pass in <code>contact_stage_id</code> in this endpoint. Use contacts/upda
                 </span><span class="nl">"linkedin_uid"</span><span class="p">:</span><span class="w"> </span><span class="s2">"18511550"</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"publicly_traded_symbol"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"publicly_traded_exchange"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
-                </span><span class="nl">"logo_url"</span><span class="p">:</span><span class="w"> </span><span class="s2">"https://zenprospect-server.com/uploads/pictures/5f0265XXXXXXXXXXXXXXXXXX/picture"</span><span class="p">,</span><span class="w">
+                </span><span class="nl">"logo_url"</span><span class="p">:</span><span class="w"> </span><span class="s2">"https://apollo-server.com/uploads/pictures/5f0265XXXXXXXXXXXXXXXXXX/picture"</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"crunchbase_url"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"primary_domain"</span><span class="p">:</span><span class="w"> </span><span class="s2">"apollo.io"</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"starred_by_user_ids"</span><span class="p">:</span><span class="w"> </span><span class="p">[],</span><span class="w">
@@ -1546,7 +1546,7 @@ Do not pass in <code>contact_stage_id</code> in this endpoint. Use contacts/upda
                 </span><span class="nl">"linkedin_uid"</span><span class="p">:</span><span class="w"> </span><span class="s2">"18511550"</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"publicly_traded_symbol"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"publicly_traded_exchange"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
-                </span><span class="nl">"logo_url"</span><span class="p">:</span><span class="w"> </span><span class="s2">"https://zenprospect-server.com/uploads/pictures/5f0265XXXXXXXXXXXXXXXXXX/picture"</span><span class="p">,</span><span class="w">
+                </span><span class="nl">"logo_url"</span><span class="p">:</span><span class="w"> </span><span class="s2">"https://apollo-server.com/uploads/pictures/5f0265XXXXXXXXXXXXXXXXXX/picture"</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"crunchbase_url"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"primary_domain"</span><span class="p">:</span><span class="w"> </span><span class="s2">"apollo.io"</span><span class="p">,</span><span class="w">
                 </span><span class="nl">"starred_by_user_ids"</span><span class="p">:</span><span class="w"> </span><span class="p">[],</span><span class="w">
