--- a/index.html
+++ b/index.html
@@ -2264,11 +2264,11 @@ Do not pass in <code>contact_stage_id</code> in this endpoint. Use contacts/upda
 </tr>
 <tr>
 <td>phone_number</td>
-<td>The corporate phone for this contact.</td>
+<td>The corporate phone for this account.</td>
 </tr>
 <tr>
 <td>raw_address</td>
-<td>The address string for this contact, Apollo will intelligently infer the city, state, country, and time zone from your address</td>
+<td>The address string for this account, Apollo will intelligently infer the city, state, country, and time zone from your address</td>
 </tr>
 </tbody></table>
 <h2 id='update-an-account'>Update an Account</h2>
@@ -2335,7 +2335,7 @@ Do not pass in <code>contact_stage_id</code> in this endpoint. Use contacts/upda
 </tr>
 <tr>
 <td>phone_number</td>
-<td>The corporate phone for this contact.</td>
+<td>The corporate phone for this account.</td>
 </tr>
 </tbody></table>
 <h2 id='searching-for-accounts'>Searching for Accounts</h2>
