--- a/index.html
+++ b/index.html
@@ -454,7 +454,13 @@
 
 <p><strong>Our API is still under active development. It is subject to change without prior notice from Apollo.</strong> </p>
 
-<p>Eventually, we plan to make available in the API almost everything you can do in the UI, plus some extra functionality not available in the UI. Additionally, if you have  any suggestions for API methods you&#39;d like to see, please let us know! We would be happy to see if we can build it into our API.</p>
+<p>Eventually, we plan to make available in the API almost everything you can do in the UI, plus some extra functionality not available in the UI. Additionally, if you have any suggestions for API methods you&#39;d like to see, please let us know! We would be happy to see if we can build it into our API.</p>
+
+<aside class="notice">
+Note: Users of curl.exe on Windows OS must escape all double quotes for requests to work
+<br>
+ <code> i.e doublequotes around data, and doublequotes escaped with a backslash </code>
+</aside>
 <h1 id='authentication'>Authentication</h1>
 <blockquote>
 <p>Sample request:</p>
@@ -466,9 +472,9 @@ curl <span class="nt">-X</span> GET <span class="nt">-H</span> <span class="s2">
 <p>If authentication is successful, you should expect to see {&quot;is_logged_in&quot;:true}</p>
 </blockquote>
 
-<p>Apollo uses API keys to allow access to the API. Your may request an API key <a href="https://www.apollo.io/app/#/settings/integrations/api">here</a></p>
+<p>Apollo uses API keys to allow access to the API. You may request an API key <a href="https://www.apollo.io/app/#/settings/integrations/api">here</a></p>
 
-<p>Apollo expects for the API key to be included in all API requests to the server in as a query string parameter. </p>
+<p>Apollo expects the API key to be included in all API requests to the server as a query string parameter. </p>
 
 <aside class="notice">
 You must replace <code>YOUR_API_KEY</code> with your personal API key.
